tests/instantiating/invalid/single_element_in_group_config/bus.fbd
main bus
	c config
		groups = ["a"]
